fix linting issues

--- a/about.html
+++ b/about.html
@@ -90,7 +90,7 @@
             <a href="#" class="button">Download my CV</a>
         </div>
 
-        <svg class="cologne-picture" version="1.0" xmlns="http://www.w3.org/2000/svg" width="288.000000pt"
+        <svg class="cologne-picture" version="1.1" xmlns="http://www.w3.org/2000/svg" width="288.000000pt"
             height="287.000000pt" viewBox="0 0 288.000000 287.000000" preserveAspectRatio="xMidYMid meet">
 
             <g class="skyline" transform="translate(0.000000,287.000000) scale(0.100000,-0.100000)" fill="#000000"
@@ -219,7 +219,7 @@ c0 -5 -11 -9 -25 -9 -27 0 -32 9 -13 28 12 12 38 -1 38 -19z" />
                 <path d="M1960 1010 c-13 -8 -12 -10 3 -10 9 0 17 5 17 10 0 12 -1 12 -20 0z" />
             </g>
             <g class="windows" transform="translate(0.000000,287.000000) scale(0.100000,-0.100000)" fill="#000000"
-                stroke:"none">
+                stroke="none">
                 <path d=" M1553 1415 c0 -22 2 -30 4 -17 2 12 2 30 0 40 -3 9 -5 -1 -4 -23z" />
                 <path d="M1283 1230 c0 -25 2 -35 4 -22 2 12 2 32 0 45 -2 12 -4 2 -4 -23z" />
                 <path d="M1523 1230 c0 -25 2 -35 4 -22 2 12 2 32 0 45 -2 12 -4 2 -4 -23z" />
@@ -263,16 +263,13 @@ c0 -5 -11 -9 -25 -9 -27 0 -32 9 -13 28 12 12 38 -1 38 -19z" />
         </p>
         <div class="social-media">
             <a href="#" class="link--no-underline">
-                <img src="img/icons8-github-64.svg" alt="Github" width="30px" height="30px"
-                    enable-background="new 0 0 48 48">
+                <img src="img/icons8-github-64.svg" alt="Github" width="30" height="30">
             </a>
             <a href="#" class="link--no-underline">
-                <img src="img/icons-twitter.svg" alt="twitter" width="30px" height="30px"
-                    enable-background="new 0 0 48 48">
+                <img src="img/icons-twitter.svg" alt="twitter" width="30" height="30">
             </a>
             <a href="#" class="link--no-underline">
-                <img src="img/icons-linkedin.svg" alt="LinkedIn" width="30px" height="30px"
-                    enable-background="new 0 0 48 48">
+                <img src="img/icons-linkedin.svg" alt="LinkedIn" width="30" height="30">
             </a>
         </div>
     </footer>
