--- a/index.html
+++ b/index.html
@@ -47,16 +47,13 @@
         </p>
         <div class="social-media">
             <a href="#" class="link--no-underline">
-                <img src="img/icons8-github-64.svg" alt="Github" width="30px" height="30px"
-                    enable-background="new 0 0 48 48">
+                <img src="img/icons8-github-64.svg" alt="Github" width="30" height="30">
             </a>
             <a href="#" class="link--no-underline">
-                <img src="img/icons-twitter.svg" alt="twitter" width="30px" height="30px"
-                    enable-background="new 0 0 48 48">
+                <img src="img/icons-twitter.svg" alt="twitter" width="30" height="30">
             </a>
             <a href="#" class="link--no-underline">
-                <img src="img/icons-linkedin.svg" alt="LinkedIn" width="30px" height="30px"
-                    enable-background="new 0 0 48 48">
+                <img src="img/icons-linkedin.svg" alt="LinkedIn" width="30" height="30">
             </a>
         </div>
     </footer>
