--- a/work.html
+++ b/work.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zxx">
 
 <head>
     <meta charset="UTF-8">
@@ -98,16 +98,13 @@
         </p>
         <div class="social-media">
             <a href="#" class="link--no-underline">
-                <img src="img/icons8-github-64.svg" alt="Github" width="30px" height="30px"
-                    enable-background="new 0 0 48 48">
+                <img src="img/icons8-github-64.svg" alt="Github" width="30" height="30">
             </a>
             <a href="#" class="link--no-underline">
-                <img src="img/icons-twitter.svg" alt="twitter" width="30px" height="30px"
-                    enable-background="new 0 0 48 48">
+                <img src="img/icons-twitter.svg" alt="twitter" width="30" height="30">
             </a>
             <a href="#" class="link--no-underline">
-                <img src="img/icons-linkedin.svg" alt="LinkedIn" width="30px" height="30px"
-                    enable-background="new 0 0 48 48">
+                <img src="img/icons-linkedin.svg" alt="LinkedIn" width="30" height="30">
             </a>
         </div>
     </footer>
