--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
         </nav>
     </header>
     <main>
-        <form action="/login-form-action" method="post" id="contact-form" role="form">
+        <form action="/login-form-action" method="post" id="contact-form">
             <label class="standard-label" for="contact-email">E-mail:</label>
             <input type="email" id="contact-email" required>
             <label class="standard-label" for="telephone">Telephone:</label>
@@ -60,16 +60,13 @@
         </p>
         <div class="social-media">
             <a href="#" class="link--no-underline">
-                <img src="img/icons8-github-64.svg" alt="Github" width="30px" height="30px"
-                    enable-background="new 0 0 48 48">
+                <img src="img/icons8-github-64.svg" alt="Github" width="30" height="30">
             </a>
             <a href="#" class="link--no-underline">
-                <img src="img/icons-twitter.svg" alt="twitter" width="30px" height="30px"
-                    enable-background="new 0 0 48 48">
+                <img src="img/icons-twitter.svg" alt="twitter" width="30" height="30">
             </a>
             <a href="#" class="link--no-underline">
-                <img src="img/icons-linkedin.svg" alt="LinkedIn" width="30px" height="30px"
-                    enable-background="new 0 0 48 48">
+                <img src="img/icons-linkedin.svg" alt="LinkedIn" width="30" height="30">
             </a>
         </div>
     </footer>
