--- a/about.html
+++ b/about.html
@@ -273,7 +273,7 @@ c0 -5 -11 -9 -25 -9 -27 0 -32 9 -13 28 12 12 38 -1 38 -19z" />
             </a>
         </div>
     </footer>
-    <script src="js/tota11y.min.js"></script>
+    <!-- <script src="js/tota11y.min.js"></script> -->
 </body>
 
 </html>
