--- a/work.html
+++ b/work.html
@@ -108,7 +108,7 @@
             </a>
         </div>
     </footer>
-    <script src="js/tota11y.min.js"></script>
+    <!-- <script src="js/tota11y.min.js"></script> -->
 </body>
 
 </html>
