Add GitHub link

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             Find me on
         </p>
         <div class="social-media">
-            <a href="#" class="link--no-underline">
+            <a href="https://github.com/nejla-eh" class="link--no-underline">
                 <img src="img/icons8-github-64.svg" alt="Github" width="30" height="30">
             </a>
             <a href="#" class="link--no-underline">
