--- a/about.html
+++ b/about.html
@@ -262,7 +262,7 @@ c0 -5 -11 -9 -25 -9 -27 0 -32 9 -13 28 12 12 38 -1 38 -19z" />
             Find me on
         </p>
         <div class="social-media">
-            <a href="#" class="link--no-underline">
+            <a href="https://github.com/nejla-eh" class="link--no-underline">
                 <img src="img/icons8-github-64.svg" alt="Github" width="30" height="30">
             </a>
             <a href="#" class="link--no-underline">
