--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.production.css">
+    <!-- <link rel="stylesheet" type="text/css" href="css/styles.css"> -->
 </head>
 
 <body>
@@ -35,13 +36,17 @@
     </header>
     <main>
         <form action="/login-form-action" method="post" id="contact-form">
+            <h2 class="form-contact">Contact Me:</h2>
             <label class="standard-label" for="contact-email">E-mail:</label>
             <input type="email" id="contact-email" required>
+            <br><br>
             <label class="standard-label" for="telephone">Telephone:</label>
             <input type="tel" id="telephone" pattern="\d{3}[\-]\d{3}[\-]\d{4}">
+            <br><br>
             <label class="standard-label" for="message">Message:</label>
             <textarea maxlength="240" id="message" required></textarea>
-            <input type="submit" value="Send message">
+            <br><br>
+            <input class="submit-button" type="submit" value="Send message">
         </form>
         <br>
         <div>
