--- a/work.html
+++ b/work.html
@@ -25,7 +25,7 @@
                 </li>
                 <li role="presentation">
                     <a href="work.html" role="menuitem"
-                        class="navigation-list__item navigation-list__item--active">Work</a>
+                        class="navigation-list__item navigation-list__item--active">Projects</a>
                 </li>
                 <li role="presentation">
                     <a href="contact.html" role="menuitem" class="navigation-list__item">Contact</a>
@@ -34,61 +34,64 @@
         </nav>
     </header>
     <section class="projects-container">
-        <h1>Work</h1>
+        <h1>Projects</h1>
         <div class="grid">
             <div class="grid__item">
-                <h2>Phone app</h2>
+                <h2>Pokedex App</h2>
+                <img src="img/pokemon.png" width="400" alt="pokemon preview">
                 <p>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt cupiditate facilis commodi
-                    temporibus quaerat amet enim, omnis placeat in beatae perferendis magnam hic nihil unde facere
-                    doloremque aspernatur velit excepturi?
+                    A small web application using HTML, CSS, and JavaScript that loads data from the Pokémon API.
                 </p>
-                <a href="#">See phone app project</a>
+                <div class="project-links">
+                    <a href="https://nejla-eh.github.io/simple-js-app/">Live Demo</a>
+                    <a href="https://github.com/nejla-eh/simple-js-app"><img width="36" class="github-link"
+                            src="img/icons8-github-64.svg" alt="View on Github"></a>
+                </div>
             </div>
             <div class="grid__item">
-                <h2>Project 2</h2>
+                <h2>To-Do List App</h2>
+                <img src="img/to-do.png" width="400" alt="to-do preview">
                 <p>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt cupiditate facilis commodi
-                    temporibus quaerat amet enim, omnis placeat in beatae perferendis magnam hic nihil unde facere
-                    doloremque aspernatur velit excepturi?
+                    A small To-do list web application using HTML, CSS, JavaScript and jQuery
                 </p>
-                <a href="#">See project here</a>
+                <div class="project-links">
+                    <a href="https://nejla-eh.github.io/To-do-list-app/">Live Demo</a>
+                    <a href="https://github.com/nejla-eh/To-do-list-app"><img width="36" class="github-link"
+                            src="img/icons8-github-64.svg" alt="View on Github"></a>
+                </div>
             </div>
             <div class="grid__item">
-                <h2>Project 3</h2>
+                <h2>MyFlix App</h2>
+                <img src="img/myflix.png" width="400" alt="myFlix preview">
                 <p>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt cupiditate facilis commodi
-                    temporibus quaerat amet enim, omnis placeat in beatae perferendis magnam hic nihil unde facere
-                    doloremque aspernatur velit excepturi?
+                    This Node.js web application will provide users with access to information about different movies,
+                    directors, and genres. Users will be able to sign up, update their personal information, and create
+                    a list of their favorite movies. This App is written in React.js to display data from the myFlix
+                    API.
                 </p>
-                <a href="#">See project here</a>
+                <div class="project-links">
+                    <a href="https://my-flix-nejla.netlify.app/">Live Demo</a>
+                    <a href="https://github.com/nejla-eh/myFlix-client"><img width="36" class="github-link"
+                            src="img/icons8-github-64.svg" alt="View on Github"></a>
+                </div>
+                <div class="project-links">
+                    <a href="https://github.com/nejla-eh/movie-app">Backend Documentation</a>
+                </div>
             </div>
             <div class="grid__item">
-                <h2>Project 4</h2>
+                <h2>Meet App</h2>
+                <img src="img/meet.png" width="400" alt="meet preview">
                 <p>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt cupiditate facilis commodi
-                    temporibus quaerat amet enim, omnis placeat in beatae perferendis magnam hic nihil unde facere
-                    doloremque aspernatur velit excepturi?
+                    This is a serverless, progressive web application (PWA) with React, which uses a test-driven
+                    development (TDD) technique.
+
+                    The application uses the Google Calendar API to fetch upcoming events.
                 </p>
-                <a href="#">See project here</a>
-            </div>
-            <div class="grid__item">
-                <h2>Project 5</h2>
-                <p>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt cupiditate facilis commodi
-                    temporibus quaerat amet enim, omnis placeat in beatae perferendis magnam hic nihil unde facere
-                    doloremque aspernatur velit excepturi?
-                </p>
-                <a href="#">See project here</a>
-            </div>
-            <div class="grid__item">
-                <h2>Project 6</h2>
-                <p>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt cupiditate facilis commodi
-                    temporibus quaerat amet enim, omnis placeat in beatae perferendis magnam hic nihil unde facere
-                    doloremque aspernatur velit excepturi?
-                </p>
-                <a href="#">See project here</a>
+                <div class="project-links">
+                    <a href="https://nejla-eh.github.io/meet/">Live Demo</a>
+                    <a href="https://github.com/nejla-eh/meet"><img width="36" class="github-link"
+                            src="img/icons8-github-64.svg" alt="View on Github"></a>
+                </div>
             </div>
         </div>
     </section>
@@ -100,10 +103,7 @@
             <a href="https://github.com/nejla-eh" class="link--no-underline">
                 <img src="img/icons8-github-64.svg" alt="Github" width="30" height="30">
             </a>
-            <a href="#" class="link--no-underline">
-                <img src="img/icons-twitter.svg" alt="twitter" width="30" height="30">
-            </a>
-            <a href="#" class="link--no-underline">
+            <a href="https://www.linkedin.com/in/nejla-efendic-hujdur-ba0a11195/" class="link--no-underline">
                 <img src="img/icons-linkedin.svg" alt="LinkedIn" width="30" height="30">
             </a>
         </div>
