--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
                         class="navigation-list__item navigation-list__item--active">About Me</a>
                 </li>
                 <li role="presentation">
-                    <a href="work.html" role="menuitem" class="navigation-list__item">Work</a>
+                    <a href="work.html" role="menuitem" class="navigation-list__item">Projects</a>
                 </li>
                 <li role="presentation">
                     <a href="contact.html" role="menuitem" class="navigation-list__item">Contact</a>
@@ -265,10 +265,7 @@ c0 -5 -11 -9 -25 -9 -27 0 -32 9 -13 28 12 12 38 -1 38 -19z" />
             <a href="https://github.com/nejla-eh" class="link--no-underline">
                 <img src="img/icons8-github-64.svg" alt="Github" width="30" height="30">
             </a>
-            <a href="#" class="link--no-underline">
-                <img src="img/icons-twitter.svg" alt="twitter" width="30" height="30">
-            </a>
-            <a href="#" class="link--no-underline">
+            <a href="https://www.linkedin.com/in/nejla-efendic-hujdur-ba0a11195/" class="link--no-underline">
                 <img src="img/icons-linkedin.svg" alt="LinkedIn" width="30" height="30">
             </a>
         </div>
