--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
                     <a href="about.html" role="menuitem" class="navigation-list__item">About Me</a>
                 </li>
                 <li role="presentation">
-                    <a href="work.html" role="menuitem" class="navigation-list__item">Work</a>
+                    <a href="work.html" role="menuitem" class="navigation-list__item">Projects</a>
                 </li>
                 <li role="presentation">
                     <a href="contact.html" role="menuitem"
@@ -67,10 +67,7 @@
             <a href="https://github.com/nejla-eh" class="link--no-underline">
                 <img src="img/icons8-github-64.svg" alt="Github" width="30" height="30">
             </a>
-            <a href="#" class="link--no-underline">
-                <img src="img/icons-twitter.svg" alt="twitter" width="30" height="30">
-            </a>
-            <a href="#" class="link--no-underline">
+            <a href="https://www.linkedin.com/in/nejla-efendic-hujdur-ba0a11195/" class="link--no-underline">
                 <img src="img/icons-linkedin.svg" alt="LinkedIn" width="30" height="30">
             </a>
         </div>
