update work page

--- a/work.html
+++ b/work.html
@@ -93,6 +93,37 @@
                             src="img/icons8-github-64.svg" alt="View on Github"></a>
                 </div>
             </div>
+            <div class="grid__item">
+                <h2>Chat App</h2>
+                <img src="img/chat.jpg" width="150" alt="chat preview">
+                <p>
+                    Chat App for both Android/iOS created with React Native.
+
+                    Technologies used:
+
+                    - React Native
+                    - Expo
+                    - Google Firestore Database
+
+                </p>
+                <div class="project-links">
+                    <a href="https://github.com/nejla-eh/chat-app"><img width="36" class="github-link"
+                            src="img/icons8-github-64.svg" alt="View on Github"></a>
+                </div>
+            </div>
+            <div class="grid__item">
+                <h2>MyFlix Angular App</h2>
+                <img src="img/angular.png" width="400" alt="angular preview">
+                <p>
+                    The client-side for an application called myFlix based on
+                    its existing server-side code (REST API and database) built with Angular.
+                </p>
+                <div class="project-links">
+                    <a href="https://nejla-eh.github.io/myFlix-Angular-client/welcome">Live Demo</a>
+                    <a href="https://github.com/nejla-eh/myFlix-Angular-client"><img width="36" class="github-link"
+                            src="img/icons8-github-64.svg" alt="View on Github"></a>
+                </div>
+            </div>
         </div>
     </section>
     <footer class="page-footer">
