--- a/contact.html
+++ b/contact.html
@@ -14,64 +14,53 @@
 </head>
 
 <body>
-    <header class="page-header">
-        <img src="img/logo.png" class="page-header__item" alt="Nejla logo">
-        <nav class="main-navigation page-header__item">
-            <ul role="menubar" class="navigation-list">
-                <li role="presentation">
-                    <a href="index.html" role="menuitem" class="navigation-list__item">Home</a>
-                </li>
-                <li role="presentation">
-                    <a href="about.html" role="menuitem" class="navigation-list__item">About Me</a>
-                </li>
-                <li role="presentation">
-                    <a href="work.html" role="menuitem" class="navigation-list__item">Projects</a>
-                </li>
-                <li role="presentation">
-                    <a href="contact.html" role="menuitem"
-                        class="navigation-list__item navigation-list__item--active">Contact</a>
-                </li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <form action="/login-form-action" method="post" id="contact-form">
-            <h2 class="form-contact">Contact Me:</h2>
-            <label class="standard-label" for="contact-email">E-mail:</label>
-            <input type="email" id="contact-email" required>
-            <br><br>
-            <label class="standard-label" for="telephone">Telephone:</label>
-            <input type="tel" id="telephone" pattern="\d{3}[\-]\d{3}[\-]\d{4}">
-            <br><br>
-            <label class="standard-label" for="message">Message:</label>
-            <textarea maxlength="240" id="message" required></textarea>
-            <br><br>
-            <input class="submit-button" type="submit" value="Send message">
-        </form>
-        <br>
-        <div>
-            Address
-            <br>
-            Tel <a href="tel:+4987654321" aria-label="Phone number">+49 87654321</a>
-            <br>
-            Skype <a href="skype:my.name">my.name</a>
-            <br>
-            <a href="mailto:myemail@hotmail.com">myemail@hotmail.com</a>
-        </div>
-    </main>
-    <footer class="page-footer">
+    <div class="flex-container--contact">
+        <header class="page-header">
+            <div class="logo-container">
+                <img src="img/logo.png" alt="Nejla logo">
+            </div>
+            <nav class="main-navigation page-header__item">
+                <ul role="menubar" class="navigation-list">
+                    <li role="presentation">
+                        <a href="index.html" role="menuitem"
+                            class="navigation-list__item navigation-list__item--active">Home</a>
+                    </li>
+                    <li role="presentation">
+                        <a href="about.html" role="menuitem" class="navigation-list__item">About Me</a>
+                    </li>
+                    <li role="presentation">
+                        <a href="work.html" role="menuitem" class="navigation-list__item">Projects</a>
+                    </li>
+                    <li role="presentation" class="active">
+                        <a href="contact.html" role="menuitem" class="navigation-list__item">Contact</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+        <main class="contact-container">
+            <h1>
+                You can find me on:
+            </h1>
+            <div class="socials">
+                <a href="https://github.com/nejla-eh" class="link--no-underline">
+                    <img src="img/contact/github.png" alt="Github" width="90" height="90">
+                </a>
+                <a href="https://www.linkedin.com/in/nejla-efendic-hujdur-ba0a11195/" class="link--no-underline">
+                    <img src="img/contact/linkedin.png" alt="LinkedIn" width="90" height="90">
+                </a>
+            </div>
+            <h2>
+                or you can contact me at <span class="contact-mail">nejlaefendic@hotmail.com</span>  
+            </h2>
+            <img src="https://media.tenor.com/GOj9ZF_-ZOcAAAAM/cat.gif" class="cat" alt="meme-cat">
+        </main>
+        <div></div>
+    </div>
+    <!-- <footer class="page-footer">
         <p>
             Find me on
         </p>
-        <div class="social-media">
-            <a href="https://github.com/nejla-eh" class="link--no-underline">
-                <img src="img/icons8-github-64.svg" alt="Github" width="30" height="30">
-            </a>
-            <a href="https://www.linkedin.com/in/nejla-efendic-hujdur-ba0a11195/" class="link--no-underline">
-                <img src="img/icons-linkedin.svg" alt="LinkedIn" width="30" height="30">
-            </a>
-        </div>
-    </footer>
+    </footer> -->
     <!-- <script src="js/tota11y.min.js"></script> -->
 </body>
 
