--- a/index.html
+++ b/index.html
@@ -13,47 +13,55 @@
 </head>
 
 <body>
-    <header class="page-header">
-        <img src="img/logo.png" class="page-header__item" alt="Nejla logo">
-        <nav class="main-navigation page-header__item">
-            <ul role="menubar" class="navigation-list">
-                <li role="presentation">
-                    <a href="index.html" role="menuitem"
-                        class="navigation-list__item navigation-list__item--active">Home</a>
-                </li>
-                <li role="presentation">
-                    <a href="about.html" role="menuitem" class="navigation-list__item">About Me</a>
-                </li>
-                <li role="presentation">
-                    <a href="work.html" role="menuitem" class="navigation-list__item">Projects</a>
-                </li>
-                <li role="presentation">
-                    <a href="contact.html" role="menuitem" class="navigation-list__item">Contact</a>
-                </li>
-            </ul>
-        </nav>
-    </header>
-    <main class="profile">
-        <img src="img/portrait-img.jpg" class="profile__portrait" alt="A photograph of me">
-        <h1>Hello World!</h1>
-        <p>
-            My name is Nejla. I am a soon to be <span>web</span> developer from Germany.
-        </p>
-        <a href="https://github.com/nejla-eh">Check out some of my code</a>
-    </main>
-    <footer class="page-footer">
-        <p>
-            Find me on
-        </p>
-        <div class="social-media">
-            <a href="https://github.com/nejla-eh" class="link--no-underline">
-                <img src="img/icons8-github-64.svg" alt="Github" width="30" height="30">
-            </a>
-            <a href="https://www.linkedin.com/in/nejla-efendic-hujdur-ba0a11195/" class="link--no-underline">
-                <img src="img/icons-linkedin.svg" alt="LinkedIn" width="30" height="30">
-            </a>
-        </div>
-    </footer>
+    <div class="flex-container">
+        <header class="page-header">
+            <div class="logo-container">
+                <img src="img/logo.png" alt="Nejla logo">
+            </div>
+            <nav class="main-navigation page-header__item">
+                <ul role="menubar" class="navigation-list">
+                    <li role="presentation" class="active">
+                        <a href="index.html" role="menuitem"
+                            class="navigation-list__item navigation-list__item--active">Home</a>
+                    </li>
+                    <li role="presentation">
+                        <a href="about.html" role="menuitem" class="navigation-list__item">About Me</a>
+                    </li>
+                    <li role="presentation">
+                        <a href="work.html" role="menuitem" class="navigation-list__item">Projects</a>
+                    </li>
+                    <li role="presentation">
+                        <a href="contact.html" role="menuitem" class="navigation-list__item">Contact</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+        <main class="profile">
+            <div class="profile-container">
+                <img src="img/portrait-img.jpg" class="profile__portrait" alt="A photograph of me">
+                <div>
+                    <h1>Hello!</h1>
+                    <p>
+                        My name is Nejla. I am a frontend developer from Germany.
+                    </p>
+                    <a href="https://github.com/nejla-eh">Check out some of my code</a>
+                </div>
+            </div>
+        </main>
+        <footer class="page-footer">
+            <p>
+                Find me on
+            </p>
+            <div class="social-icons">
+                <a href="https://github.com/nejla-eh" class="link--no-underline">
+                    <img src="img/icons8-github-64.svg" alt="Github" width="30" height="30">
+                </a>
+                <a href="https://www.linkedin.com/in/nejla-efendic-hujdur-ba0a11195/" class="link--no-underline">
+                    <img src="img/icons-linkedin.svg" alt="LinkedIn" width="30" height="30">
+                </a>
+            </div>
+        </footer>
+    </div>
     <!-- <script src="js/tota11y.min.js"></script> -->
 </body>
 
